# controller/user/Cuser.go
@@ -6,26 +6,24 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/mirzha99/go-penduduk/config"
+	"github.com/mirzha99/go-penduduk/helper"
 	"github.com/mirzha99/go-penduduk/models/Muser"
 	"github.com/mirzha99/timegoza/timegoza"
 	"golang.org/x/crypto/bcrypt"
 )
 
-// SuccessResponse adalah struktur respons sukses
-type SuccessResponse struct {
-	Message string `json:"message"`
-	Token   string `json:"token"`
-}
-
-// ErrorResponse adalah struktur respons kesalahan
-type ErrorResponse struct {
-	Error  string `json:"error"`
-	Detail string `json:"detail"`
-}
-
+// @Summary  User List
+// @Tags User
+// @Description Show All Data User
+// @Security ApiKeyAuth
+// @Accept json
+// @Success 200 {object} helper.SuccessResponse
+// @Failure 404 {object} helper.ErrorResponse
+// @Router /users [get]
 func Index(ctx *gin.Context) {
 	if !config.Limiter.Allow() {
-		ctx.JSON(http.StatusTooManyRequests, gin.H{"error": "Too many requests"})
+		e := helper.ErrorResponse{StatusCode: 492, Error: "Too many requests"}
+		ctx.JSON(http.StatusTooManyRequests, e.Error)
 		ctx.Abort()
 		return
 	}
@@ -33,7 +31,8 @@ func Index(ctx *gin.Context) {
 
 	config.DB.Select("id, nama, email, username, email, role, created_at, change_at").Find(&user)
 	if len(user) == 0 {
-		ctx.JSON(404, gin.H{"Message": "Data User Is Empty"})
+		e := helper.ErrorResponse{StatusCode: 404, Detail: "Data User Is Empty"}
+		ctx.JSON(404, e.Detail)
 		return
 	}
 	for i := range user {
@@ -44,22 +43,41 @@ func Index(ctx *gin.Context) {
 		user[i].Created_at = created.HumanTime()
 		user[i].Change_at = change.HumanTime()
 	}
-	ctx.JSON(200, gin.H{"User": Muser.GetUserAllPublic(user)})
+	tokenCookie, _ := ctx.Cookie("jwt-token")
+	s := helper.SuccessResponse{StatusCode: 200, Result: Muser.GetUserAllPublic(user), Token: tokenCookie}
+	ctx.JSON(200, s.SuccesResult())
 }
+
+// @Summary Get user by id
+// @Tags User
+// @Description Data User By Id
+// @Accept json
+// @Param id path int true "User ID"
+// @Security ApiKeyAuth
+// @Success 201 {object} helper.SuccessResponse
+// @Failure 400 {object} helper.ErrorResponse
+// @Router /user/{id} [get]
 func Byid(ctx *gin.Context) {
 	if !config.Limiter.Allow() {
-		ctx.JSON(http.StatusTooManyRequests, gin.H{"error": "Too many requests"})
+		e := helper.ErrorResponse{StatusCode: 492, Error: "Too many requests"}
+		ctx.JSON(http.StatusTooManyRequests, e.Error)
 		ctx.Abort()
 		return
 	}
 	var user Muser.User
 	id := ctx.Param("id")
 	if err := config.DB.Where("id = ?", id).First(&user).Error; err != nil {
-		ctx.JSON(404, gin.H{"error": "User not found"})
+		e := helper.ErrorResponse{StatusCode: 404, Detail: "User Not Found", Error: err.Error()}
+		ctx.JSON(404, e.ErrorResultDetail())
 		return
 	}
-
-	ctx.JSON(200, gin.H{"User": user.PublicUser()})
+	//get cookie
+	tokenCookie, err := ctx.Cookie("jwt-token")
+	if err != nil {
+		ctx.AbortWithStatus(http.StatusUnauthorized)
+	}
+	s := helper.SuccessResponse{Result: user.PublicUser(), StatusCode: 200, Token: tokenCookie}
+	ctx.JSON(200, s.SuccesResult())
 }
 func email_already_exits(email string) bool {
 	var user Muser.User
@@ -78,19 +96,22 @@ func username_already_exits(username string) bool {
 
 // @Summary Register a new user
 // @Tags Auth
-// @Description Create a new user with the provided data
+// @Description Create a new user with register
+// @Security ApiKeyAuth
 // @Accept json
-// @Param user body Muser.User true "User information"
-// @Success 201 {object} SuccessResponse
-// @Failure 400 {object} ErrorResponse
+// @Param user body Muser.UserInput true "User information"
+// @Success 201 {object} helper.SuccessResponse
+// @Failure 400 {object} helper.ErrorResponse
 // @Router /register [post]
 func Add(ctx *gin.Context) {
 	if !config.Limiter.Allow() {
-		ctx.JSON(http.StatusTooManyRequests, gin.H{"error": "Too many requests"})
+		e := helper.ErrorResponse{StatusCode: 492, Error: "Too many requests"}
+		ctx.JSON(http.StatusTooManyRequests, e.Error)
 		ctx.Abort()
 		return
 	}
 	var user Muser.User
+
 	if err := ctx.ShouldBindJSON(&user); err != nil {
 		ctx.JSON(400, gin.H{"error": err.Error()})
 		return
@@ -105,13 +126,15 @@ func Add(ctx *gin.Context) {
 	}
 	hash, err := bcrypt.GenerateFromPassword([]byte(user.Password), 10)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"Message": "Error Hash Password"})
+		e := helper.ErrorResponse{Detail: "Error Hash Password", Error: err.Error(), StatusCode: http.StatusBadRequest}
+		ctx.JSON(http.StatusBadRequest, e.ErrorResultDetail())
 		return
 	}
 	user.Password = string(hash)
 	user.Created_at = strconv.Itoa(int(timegoza.EpochTime()))
 	user.Change_at = strconv.Itoa(int(timegoza.EpochTime()))
 	user.Role = "Staff"
+
 	result := config.DB.Create(&user)
 	if result.Error != nil {
 		ctx.JSON(400, gin.H{"message": "User created Failed", "user": user})
@@ -121,9 +144,21 @@ func Add(ctx *gin.Context) {
 	}
 
 }
+
+// @Summary Edit user
+// @Tags User
+// @Description Edit Data User
+// @Security ApiKeyAuth
+// @Accept json
+// @Param id path int true "User ID"
+// @Param user body Muser.UserInput true "User information"
+// @Success 201 {object} helper.SuccessResponse
+// @Failure 400 {object} helper.ErrorResponse
+// @Router /user/{id} [put]
 func Edit(ctx *gin.Context) {
 	if !config.Limiter.Allow() {
-		ctx.JSON(http.StatusTooManyRequests, gin.H{"error": "Too many requests"})
+		e := helper.ErrorResponse{StatusCode: 492, Error: "Too many requests"}
+		ctx.JSON(http.StatusTooManyRequests, e.Error)
 		ctx.Abort()
 		return
 	}
@@ -137,6 +172,14 @@ func Edit(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
+	hash, err := bcrypt.GenerateFromPassword([]byte(user.Password), 10)
+	if err != nil {
+		e := helper.ErrorResponse{Detail: "Error Hash Password", Error: err.Error(), StatusCode: http.StatusBadRequest}
+		ctx.JSON(http.StatusBadRequest, e.ErrorResultDetail())
+		return
+	}
+	user.Password = string(hash)
+	user.Change_at = strconv.Itoa(int(timegoza.EpochTime()))
 	row := config.DB.Save(&user)
 	if row.RowsAffected == 0 {
 		ctx.JSON(http.StatusInternalServerError, gin.H{"message": "User update failed"})
@@ -144,9 +187,20 @@ func Edit(ctx *gin.Context) {
 	}
 	ctx.JSON(200, gin.H{"message": "User Successly Update", "user": user})
 }
+
+// @Summary Delete user
+// @Tags User
+// @Description Delete Data User by Id
+// @Security ApiKeyAuth
+// @Accept json
+// @Param id path int true "User ID"
+// @Success 201 {object} helper.SuccessResponse
+// @Failure 400 {object} helper.ErrorResponse
+// @Router /user/{id} [delete]
 func Delete(ctx *gin.Context) {
 	if !config.Limiter.Allow() {
-		ctx.JSON(http.StatusTooManyRequests, gin.H{"error": "Too many requests"})
+		e := helper.ErrorResponse{StatusCode: 492, Error: "Too many requests"}
+		ctx.JSON(http.StatusTooManyRequests, e.Error)
 		ctx.Abort()
 		return
 	}
@@ -162,6 +216,5 @@ func Delete(ctx *gin.Context) {
 		ctx.JSON(500, gin.H{"error": "Failed to delete user"})
 		return
 	}
-
 	ctx.JSON(200, gin.H{"message": "User deleted successfully"})
 }
